--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,3 @@
-CONNECT_IMAGE_URL = miguelnajar/kafka-connector:0.41.0v1
 CLUSTER_NAME = quickplay0
+CONNECT_IMAGE_URL = miguelnajar/kafka-connector:0.41.0v1
+CLUSTER_NAMESPACE = kafka
