--- a/install/cluster-operator/022-RoleBinding-strimzi-cluster-operator.yaml
+++ b/install/cluster-operator/022-RoleBinding-strimzi-cluster-operator.yaml
@@ -7,7 +7,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka
+    namespace: ${{ env.CLUSTER_NAMESPACE }}
 roleRef:
   kind: ClusterRole
   name: strimzi-cluster-operator-leader-election
