--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,5 @@
 CLUSTER_NAME = quickplay0
 CONNECT_IMAGE_URL = miguelnajar/kafka-connector:0.41.0v1
 CLUSTER_NAMESPACE = kafka
+NODEPOOL_K8S_LABLE_KEY = nodepool
+NODEPOOL_K8S_LABEL_VALUE = tools
