--- a/connect/kafka-connect.yaml
+++ b/connect/kafka-connect.yaml
@@ -40,7 +40,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
-                - key: nodepool
+                - key: ${{ env.NODEPOOL_K8S_LABLE_KEY }}
                   operator: In
                   values:
-                  - tools
+                  - ${{ env.NODEPOOL_K8S_LABEL_VALUE }}
