--- a/sample.env
+++ b/sample.env
@@ -3,4 +3,6 @@ CONNECT_IMAGE_URL = miguelnajar/kafka-connector:0.41.0v1
 CLUSTER_NAMESPACE = kafka
 NODEPOOL_K8S_LABLE_KEY = nodepool
 NODEPOOL_K8S_LABEL_VALUE = tools
-COUCHBASE_SEED_NODES1 = cb1.api.cms.somedomain.local,cb2.api.cms.somedomain.local,cb3.api.cms.somedomain.local
+AGGREGATOR_COUCHBASE_SEED_NODES = cb1.api.cms.somedomain.local,cb2.api.cms.somedomain.local,cb3.api.cms.somedomain.local
+VODAGGREGATOR_COUCHBASE_SEED_NODES = cb1.api.cms.somedomain.local,cb2.api.cms.somedomain.local,cb3.api.cms.somedomain.local
+SNOWFLAKE_HOST = fj49425.west-us-2.azure.snowflakecomputing.com
